mosaic support fixes added proper mosaic transaction processing introduced flatbuffer schemas and made flatbuffer the latest in the build created ALIAS transaction added XPX and removed XEM